# collectly

./: .assets_mapping  .dockerignore  .env.example  .gitattributes  .gitignore  CODE_WIKI.md  Dockerfile  Dockerfile.frontend  README.md  READMEzh.md  deploy-local.ps1  deploy-local.sh  deploy.ps1  deploy.sh  docker-compose.yml  index.html  log.txt  nginx.conf  package-lock.json  package.json  pyproject.toml  requirements.txt  setup-tunnel.ps1  start.bat  start.ps1  start.sh  terminal_log.txt  test.json  test.py  webpack.config.js
.plan/45fa5eb1-912f-45e1-a270-d27a0a6bb068/: plan.md
.plan/f2187872-e18b-4838-881b-3c3b6df6d3ca/: plan.md
.trae/rules/: venv-management.md
.wiki/: AGENT.md  index.md  log.md  overview.md
.wiki/apis/: rest-api.md
.wiki/configs/: deployment.md  environment.md
.wiki/functions/: key-functions.md
.wiki/models/: schemas.md
.wiki/modules/: backend-api.md  config.md  content-manager.md  exceptions.md  frontend.md  learning-manager.md  llm-service.md  logger.md  platform-parser.md  python-parser.md  search-engine.md  vector-service.md
assets/: AI_驱动的大模型_Agent_RAG_多模态个人知识收藏与检索管家——完整可落地需求文档.md
backend/: Dockerfile  requirements.txt  start.bat  start.ps1
backend/app/: main.py
backend/examples/: llm_usage_examples.py
backend/tests/: basic_test_report.json  debug_api_response.py  (+10 more)
docs/: IMPLEMENTATION.md
python-parser/: content_extractor.py  main.py  requirements.txt  summarizer.py  test_api.py  timestamp_utils.py
src/: App.tsx
tests/: test.zhihu.py  test_bilibili.py  test_douyin.py  test_weixin.py  test_xiaohongshu.py
(+56 files in other folders)
