[project]
name = "python-parser"
version = "0.1.0"
description = "A web content parser service built with FastAPI"
requires-python = ">=3.8"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "httpx==0.25.2",
    "beautifulsoup4==4.12.2",
    "lxml==4.9.3",
    "pydantic==2.5.0",
    "python-multipart==0.0.6",
    "openai==1.3.0",
    "trafilatura==1.6.2",
    "readability-lxml==0.8.1",
    "tikhub>=1.0.3",
    "dashscope>=1.25.17",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
environments = ["sys_platform == 'win32'", "sys_platform == 'linux'"]


